# PRGChess

./: .gitignore  CMakeLists.txt  LoadSharedFiles.cmake  Readme.md
resources/: __scene.json  heavy_scene.json  scene.json
resources/shaders/: fragment.fs  primitive_sdf.fs  vertex.vs
src/: AABB.cpp  AABB.h  main.cpp  scene.cpp  scene.h  sceneGpuUtils.cpp  sceneGpuUtils.h  sceneUtils.cpp  sceneUtils.h  vertex.vs
src/scene/: Material.h  Model.h  ModelGeometry.h  Primitive.cpp  Primitive.h  Scene.h  Transform.cpp  Transform.h
